--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -3,6 +3,8 @@
 	background-size: cover;
 	background-position: center;
 	color: #fff;
+	min-height: 90vh;
+
 }
 .hero h1,
 .hero h2,
@@ -15,27 +17,26 @@
 
 .hero h1{
 	font-family: 'Black Jack';
-	font-size: 3.25rem;
+	font-size: 3rem;
 	font-weight: 900; /* extra bold arba black */
+	color: #282828;
 }
 
 .hero h2{
-	font-size: 3.375rem;
+	font-size: 2rem;
+	color: #484848;
 }
 
 .hero h3{
-	font-size: 2.125rem;
+	font-size: 1.125rem;
+	color: #484848;
 }
-
-
-
-.hero .flex-container{
-	justify-content: flex-end;
-	align-items: center;
-	padding-top: 150px;
-	padding-right: 150px;
-	min-height: 90vh;
+.hero .container {
+	justify-content:flex-end;
+	align-items:center;
+	min-height: calc(100vh - 62px);
 	position: relative;
-	padding-bottom: 120px;
+
 }
+
 
