--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -2,7 +2,7 @@
 *::before,
 *::after {
 	box-sizing:border-box;
-	border: 1px solid red;
+	border: 0px solid red;
 }
 
 body {
@@ -11,6 +11,7 @@ body {
 
 html {
 	font-size: 16px;
+    // background-color: #e5e4e4;
 }
 @font-face {
     font-family: 'Black Jack';
