--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 
 html {
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 
 @font-face {
@@ -23,10 +24,10 @@ html {
 }
 
 .main-header {
+  background-color: white;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background-color: #e5e4e4;
   z-index: 2;
 }
 
@@ -39,6 +40,7 @@ html {
   border-bottom: 2px solid  #ea4c89;
   opacity: .9;
   width: 1000px;
+  padding: 5px;
 }
 
 .main-header .container {
@@ -46,43 +48,85 @@ html {
   -ms-flex-pack: center;
   justify-content: center;
   width: 40%;
-  top: 0;
+  background-color: white;
 }
 
 .main-header ul {
   list-style: none;
 }
 
-.main-header nav a {
-  color: black;
-  font-size: 1.5rem;
-  text-decoration: none;
-}
-
-.main-header nav a:hover {
-  color: #14af8f;
-}
-
 .main-nav .flex-container {
   -ms-flex-pack: distribute;
   justify-content: space-around;
+  margin: 5px;
 }
 
 .phone3 {
   position: absolute;
   left: 10%;
   bottom: -40%;
+  z-index: 0;
+}
+
+.nav-link {
+  border-radius: 4px;
+  border: none;
+  text-align: center;
+  font-size: 1.5rem;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+}
+
+.nav-link span {
+  color: #14af8f;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
+  background-color: white;
+}
+
+.nav-link span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+  color: #ea4c89;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
 .container {
   max-width: 1100px;
   margin: 0 auto;
+  position: relative;
 }
 
 .flex-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+section:not(.hero) {
+  background-color: white;
+  position: relative;
 }
 
 .about {
@@ -125,12 +169,26 @@ html {
   color: #14af8f;
   border: 5px solid #14af8f;
   border-radius: 25px;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
 }
 
 .about a:hover {
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .sayHello {
@@ -144,6 +202,43 @@ html {
   -ms-transform: translate(20%, 30%);
   transform: translate(20%, 30%);
   bottom: 0;
+}
+
+.logo1 {
+  background-color: #fff;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  color: white;
+  margin: 0 0 0 50px;
+  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+}
+
+.logo1 a {
+  text-decoration: none;
+}
+
+.logo1 h2 {
+  padding: 30px;
+}
+
+.logo1:hover {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .hero {
@@ -167,13 +262,13 @@ html {
   font-family: 'Black Jack';
   font-size: 3rem;
   font-weight: 900;
-  /* extra bold arba black */
   color: #282828;
 }
 
-.hero h2 {
+h2 {
   font-size: 2rem;
   color: #484848;
+  font-family: Comic Sans MS, Comic Sans, cursive;
 }
 
 .hero h3 {
@@ -221,26 +316,40 @@ html {
 }
 
 .about2 .section-heading {
-  background-color: white;
-  padding: 66px 25px 0 600px;
-  border-radius: 15px 50px 0 50px;
-  border-right: 2px solid  #ea4c89;
-  border-top: 5px solid  #ea4c89;
+  background-color: #fff;
+  padding: 4.125rem 1.562rem 0 37.5rem;
+  border-radius: .937rem 3.125rem 0 3.125rem;
+  border-right: .125rem solid  #ea4c89;
+  border-top: .312 solid  #ea4c89;
   min-height: 100vh;
 }
 
 .about2 a {
-  padding: 25px;
+  padding: 1.562rem;
   display: inline-block;
   color: #ea4c89;
-  border: 5px solid #ea4c89;
-  border-radius: 30px;
+  border: .312rem solid #ea4c89;
+  border-radius: 1.875rem;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
 }
 
 .about2 a:hover {
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .breaking_bad {
@@ -293,6 +402,26 @@ html {
   padding: 30px;
   border: 2px solid black;
   border-radius: 100px;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
+}
+
+.section-poz i:hover {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .about3 {
@@ -305,6 +434,67 @@ html {
   text-align: center;
 }
 
+#iVirsu {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #14af8f;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
+}
+
+#iVirsu:hover {
+  background-color: #ea4c89;
+  -webkit-transition: 0.9s;
+  -o-transition: 0.9s;
+  transition: 0.9s;
+}
+
+form.form1 {
+  display: table;
+}
+
+div.form1 {
+  display: table-row;
+}
+
+label, input {
+  display: table-cell;
+  margin-bottom: 10px;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+}
+
+input {
+  width: 100%;
+  border-radius: 10px;
+  border-top: 4px solid #14af8f;
+  border-left: 2px solid #14af8f;
+  border-right: 4px solid  #ea4c89;
+  border-bottom: 2px solid  #ea4c89;
+}
+
+label {
+  padding-right: 10px;
+}
+
+.form-box {
+  margin: 25px;
+}
+
+.antras {
+  background-color: white;
+}
+
 .antras .container {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
@@ -312,19 +502,39 @@ html {
   background-color: #FFFFFF;
 }
 
+.sorting {
+  width: 100%;
+}
+
+.sorting_poz {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.custom_select value {
+  border-radius: 5px;
+}
+
 .picture {
+  margin: 9px;
   padding: 10px;
-  width: 33.33%;
+  width: 30%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
   border-left: 1px solid #14af8f;
   border-top: 1px solid #14af8f;
-  border-radius: 30px;
+  background-color: white;
+  border-radius: 5px;
+  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
 }
 
 .picture_img {
+  position: relative;
   width: 70%;
   margin: 0;
 }
@@ -335,7 +545,7 @@ html {
 
 .picture img {
   width: 100%;
-  border-radius: 15px;
+  border-radius: 5px;
   display: block;
 }
 
@@ -358,78 +568,27 @@ html {
   background: -webkit-radial-gradient(#ffffeb, #e3b03b);
   background: -o-radial-gradient(#ffffeb, #e3b03b);
   background: radial-gradient(#ffffeb, #e3b03b);
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .picture h2 {
   text-align: center;
 }
 
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 4;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-}
-
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 4;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 0 auto;
-  /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  border-radius: 20px;
-  width: 50%;
-  /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#myBtn {
+.button_youtube {
   background-color: white;
   color: white;
   text-align: center;
@@ -439,39 +598,72 @@ html {
   margin: 0;
   cursor: -webkit-zoom-in;
   cursor: zoom-in;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  -o-transition: transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform .8s;
+  transition: -webkit-transform .8s;
+  -o-transition: transform .8s;
+  transition: transform .8s;
+  transition: transform .8s, -webkit-transform .8s;
 }
 
-#myBtn:hover {
-  -ms-transform: scale(1.06);
-  /* IE 9 */
-  -webkit-transform: scale(1.06);
-  /* Safari 3-8 */
-  transform: scale(1.06);
+.button_youtube:hover {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 .overlay {
-  bottom: 0;
-  background-color: black;
-  background: white;
-  /* Black see-through */
-  color: black;
-  width: 100%;
-  -webkit-transition: .5s ease;
-  -o-transition: .5s ease;
-  transition: .5s ease;
+  position: absolute;
+  top: 15%;
+  color: #ff4d4d;
+  width: 20%;
+  -webkit-transition: opacity .5s ease;
+  -o-transition: opacity .5s ease;
+  transition: opacity .5s ease;
   opacity: 0;
-  color: black;
-  font-size: 20px;
-  text-align: center;
-  border-radius: 20px;
+  font-size: 20%;
+  border-radius: 10px;
   margin: 0;
+  font-size: 25px;
 }
 
-.picture_img :hover .overlay {
+.button_youtube:hover .overlay {
   opacity: 1;
+  cursor: pointer;
+}
+
+.custom-select onchange {
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  height: 29px;
+  padding: 5px;
+  /* If you add too much padding here, the options won't show in IE */
+  width: 268px;
+}
+
+.custom-select {
+  background: url(http://i62.tinypic.com/2e3ybe1.jpg) no-repeat right center;
+  height: 34px;
+  width: 240px;
+  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+}
+
+.custom-select select {
+  border: 1px solid #ccc;
+  font-size: 16px;
+  height: 34px;
+  width: 268px;
 }
