--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -42,9 +42,10 @@
 	color: #14af8f;
 	border: 5px solid #14af8f;
 	border-radius: 25px;
+	transition: 0.9s;
 }
 .about a:hover {
-	transform: scale(1.1); 
+	@include hover-sizing();
 }
 .sayHello {
 	margin: 0 0 100px 0;
@@ -54,4 +55,4 @@
 	right: 0%;
 	transform:translate(20%, 30%); 
 	bottom: 0;
-	}
+}
