--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -20,6 +20,10 @@
 	padding:30px;
 	border: 2px solid black;
 	border-radius: 100px;
+	transition: 0.9s;
+	&:hover{
+		@include hover-sizing();
+	}
 
 }
 .about3 {
@@ -29,4 +33,52 @@
 	font-size: .5rem;
 	color: black;
 	text-align: center;
+}
+#iVirsu {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #14af8f;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  transition: 0.9s;
+}
+
+#iVirsu:hover {
+  background-color: #ea4c89;
+  transition: 0.9s;
+}
+
+form.form1 {
+    display: table;
+}
+
+div.form1 {
+    display: table-row;
+}
+
+label, input {
+    display: table-cell;
+    margin-bottom: 10px;
+    font-family: Comic Sans MS, Comic Sans, cursive;
+   
+}
+input {
+	width: 100%;
+	border-radius: 10px;
+	@include radius1()
+}
+label {
+    padding-right: 10px;
+
+}
+.form-box {
+    margin: 25px;
 }
