--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,8 +1,8 @@
 .main-header{
+	background-color: white;
 	position: -webkit-sticky;
  	position: sticky;
 	top: 0;	
-	background-color:#e5e4e4;
 	z-index: 2;
 }
 
@@ -15,34 +15,63 @@
 	border-bottom: 2px solid  #ea4c89;
 	opacity: .9;
 	width: 1000px;
+	padding: 5px;
 }
 
-.main-header  .container {
+.main-header .container {
 	justify-content: center;
 	width: 40%;
-	top: 0;
+	background-color: white;
 }
 .main-header ul{
 	list-style: none;	
 }
-
-.main-header nav a{
-	color: black;
-	font-size: 1.5rem;
-	text-decoration: none;
-
-}
-
-.main-header nav a:hover{
-	color: #14af8f;
-}	
 .main-nav .flex-container {
 	justify-content:space-around;
+	margin: 5px;
 }
 .phone3{
 	position: absolute;
 	left: 10%;
 	bottom: -40%;
+	z-index: 0;
 	
 }
 
+.nav-link {
+	border-radius: 4px;
+	border: none;
+	text-align: center;
+	font-size: 1.5rem;
+	transition: all 0.5s;
+	cursor: pointer;
+	font-family: Comic Sans MS, Comic Sans, cursive;
+}
+.nav-link span {
+
+	color: #14af8f;
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.9s;
+	background-color: white;
+}
+
+.nav-link span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.9s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+  color: #ea4c89;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
