--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -11,7 +11,7 @@ body {
 
 html {
 	font-size: 16px;
-    // background-color: #e5e4e4;
+    scroll-behavior: smooth;
 }
 @font-face {
     font-family: 'Black Jack';
