--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,53 +31,32 @@ html {
   z-index: 2;
 }
 
-.main-nav {
-  width: 60%;
-  border-radius: 50px;
-  border-top: 4px solid #14af8f;
-  border-left: 2px solid #14af8f;
-  border-right: 4px solid  #ea4c89;
-  border-bottom: 2px solid  #ea4c89;
-  opacity: .9;
-  width: 1000px;
-  padding: 5px;
+.main-header ul {
+  list-style: none;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin: 5px;
 }
 
 .main-header .container {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 40%;
-  background-color: white;
+  background-color: #fff;
 }
 
-.main-header ul {
-  list-style: none;
-}
-
-.main-nav .flex-container {
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  margin: 5px;
-}
-
-.phone3 {
-  position: absolute;
-  left: 10%;
-  bottom: -40%;
-  z-index: 0;
-}
-
-.nav-link {
-  border-radius: 4px;
-  border: none;
-  text-align: center;
+.main-nav {
+  width: 100%;
+  border-radius: 50px;
+  border-top: 4px solid #14af8f;
+  border-left: 2px solid #14af8f;
+  border-right: 4px solid  #ea4c89;
+  border-bottom: 2px solid  #ea4c89;
+  opacity: .9;
+  width: 100%;
+  padding: 5px;
+  width: 30%;
   font-size: 1.5rem;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  cursor: pointer;
-  font-family: Comic Sans MS, Comic Sans, cursive;
 }
 
 .nav-link span {
@@ -102,14 +81,20 @@ html {
   transition: 0.9s;
 }
 
-.button:hover span {
+.nav-select:hover span {
   padding-right: 25px;
   color: #ea4c89;
 }
 
-.button:hover span:after {
+.nav-select:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+.burger {
+  display: none;
+  font-size: 2rem;
+  margin: 0;
 }
 
 .container {
@@ -129,7 +114,44 @@ section:not(.hero) {
   position: relative;
 }
 
+h2 {
+  font-size: 1.5rem;
+  color: #484848;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+}
+
+.box-shadow1, .logo1, .picture {
+  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+}
+
+.hover-sizing, .about > .container a:hover, .logo1:hover, .about2 a:hover, .section-poz i:hover, .form2 input:hover, .imdb-logo:hover, .button_youtube:hover {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
+}
+
+.radius1, input {
+  border-top: 4px solid #14af8f;
+  border-left: 2px solid #14af8f;
+  border-right: 4px solid  #ea4c89;
+  border-bottom: 2px solid  #ea4c89;
+}
+
 .about {
+  position: relative;
   margin: 0 auto;
 }
 
@@ -137,6 +159,14 @@ section:not(.hero) {
   overflow: hidden;
   position: relative;
   min-height: 100vh;
+}
+
+.about .section-heading {
+  background-color: white;
+  padding: 66px 0 250px 150px;
+  border-radius: 50px;
+  border-left: 2px solid  #14af8f;
+  border-top: 5px solid  #14af8f;
 }
 
 .about .section-heading h2 {
@@ -152,15 +182,6 @@ section:not(.hero) {
   color: #979797;
   font-size: 1.0625rem;
   line-height: 1.2941;
-  width: 50%;
-}
-
-.about .section-heading {
-  background-color: white;
-  padding: 66px 0 0 150px;
-  border-radius: 50px;
-  border-left: 2px solid  #14af8f;
-  border-top: 5px solid  #14af8f;
 }
 
 .about > .container a {
@@ -172,23 +193,6 @@ section:not(.hero) {
   -webkit-transition: 0.9s;
   -o-transition: 0.9s;
   transition: 0.9s;
-}
-
-.about a:hover {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
 }
 
 .sayHello {
@@ -211,9 +215,6 @@ section:not(.hero) {
   top: 0%;
   color: white;
   margin: 0 0 0 50px;
-  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
-  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
 }
 
 .logo1 a {
@@ -221,32 +222,7 @@ section:not(.hero) {
 }
 
 .logo1 h2 {
-  padding: 30px;
-}
-
-.logo1:hover {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
-}
-
-.hero {
-  background-image: url(../images/hero.jpg);
-  background-size: cover;
-  background-position: center;
-  color: #fff;
-  min-height: 90vh;
+  padding: 25px;
 }
 
 .hero h1,
@@ -258,17 +234,19 @@ section:not(.hero) {
   text-shadow: 1.5px 2.598px 0px rgba(10, 12, 12, 0.1);
 }
 
+.hero {
+  background-image: url(../images/hero.jpg);
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  min-height: 90vh;
+}
+
 .hero h1 {
   font-family: 'Black Jack';
   font-size: 3rem;
   font-weight: 900;
   color: #282828;
-}
-
-h2 {
-  font-size: 2rem;
-  color: #484848;
-  font-family: Comic Sans MS, Comic Sans, cursive;
 }
 
 .hero h3 {
@@ -287,6 +265,15 @@ h2 {
   position: relative;
 }
 
+.phone3 {
+  position: absolute;
+  left: 10%;
+  -webkit-transform: translate(20%, 45%);
+  -ms-transform: translate(20%, 45%);
+  transform: translate(20%, 45%);
+  bottom: 0;
+}
+
 .about2 .section-heading {
   display: inline-block;
 }
@@ -294,7 +281,7 @@ h2 {
 .about2 .container {
   overflow: hidden;
   position: relative;
-  min-height: 110vh;
+  min-height: 100vh;
 }
 
 .about2 {
@@ -317,39 +304,21 @@ h2 {
 
 .about2 .section-heading {
   background-color: #fff;
-  padding: 4.125rem 1.562rem 0 37.5rem;
-  border-radius: .937rem 3.125rem 0 3.125rem;
-  border-right: .125rem solid  #ea4c89;
-  border-top: .312 solid  #ea4c89;
-  min-height: 100vh;
+  padding: 50px 5px 300px 600px;
+  border-radius: 3px 3px 0 5px;
+  border-right: 1px solid  #ea4c89;
+  border-top: 1px solid  #ea4c89;
 }
 
 .about2 a {
-  padding: 1.562rem;
+  padding: 25px;
   display: inline-block;
   color: #ea4c89;
-  border: .312rem solid #ea4c89;
-  border-radius: 1.875rem;
+  border: 5px solid #ea4c89;
+  border-radius: 25px;
   -webkit-transition: 0.9s;
   -o-transition: 0.9s;
   transition: 0.9s;
-}
-
-.about2 a:hover {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
 }
 
 .breaking_bad {
@@ -391,47 +360,25 @@ h2 {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 100px;
+  padding: 50px;
   border: 0px solid white;
   border-radius: 50px;
   background-color: white;
 }
 
 .section-poz i {
-  margin: 20px;
-  padding: 30px;
+  margin: 10px;
+  padding: 20px;
   border: 2px solid black;
   border-radius: 100px;
   -webkit-transition: 0.9s;
   -o-transition: 0.9s;
   transition: 0.9s;
-}
-
-.section-poz i:hover {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
+  color: #14af8f;
 }
 
 .about3 {
   background-color: #e5e4e4;
-}
-
-.copyright {
-  font-size: .5rem;
-  color: black;
-  text-align: center;
 }
 
 #iVirsu {
@@ -477,18 +424,24 @@ label, input {
 input {
   width: 100%;
   border-radius: 10px;
-  border-top: 4px solid #14af8f;
-  border-left: 2px solid #14af8f;
-  border-right: 4px solid  #ea4c89;
-  border-bottom: 2px solid  #ea4c89;
 }
 
 label {
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 .form-box {
   margin: 25px;
+}
+
+.form2 input:hover {
+  cursor: pointer;
+}
+
+.copyright {
+  font-size: .5rem;
+  color: black;
+  text-align: center;
 }
 
 .antras {
@@ -498,6 +451,9 @@ label {
 .antras .container {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   position: relative;
   background-color: #FFFFFF;
 }
@@ -528,9 +484,6 @@ label {
   border-top: 1px solid #14af8f;
   background-color: white;
   border-radius: 5px;
-  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
-  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
 }
 
 .picture_img {
@@ -552,36 +505,22 @@ label {
 .imdb-logo {
   font: 1.5em Impact, HelveticaNeue-CondensedBold, sans-serif;
   color: #000;
-  text-shadow: 0 0 .15em #fff;
+  text-shadow: 0 0 2px #fff;
   text-decoration: none;
   display: inline-block;
   text-align: center;
-  padding: .10em .25em;
-  border-radius: .15em;
+  padding: 1px 1px;
+  border-radius: 2px;
   background: -webkit-radial-gradient(#ffffb8, #ce981d);
   background: -o-radial-gradient(#ffffb8, #ce981d);
   background: radial-gradient(#ffffb8, #ce981d);
-  margin: 0.5em;
+  margin: 1px;
 }
 
 .imdb-logo:hover {
   background: -webkit-radial-gradient(#ffffeb, #e3b03b);
   background: -o-radial-gradient(#ffffeb, #e3b03b);
   background: radial-gradient(#ffffeb, #e3b03b);
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
 }
 
 .picture h2 {
@@ -605,23 +544,6 @@ label {
   transition: transform .8s, -webkit-transform .8s;
 }
 
-.button_youtube:hover {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
-}
-
 .overlay {
   position: absolute;
   top: 15%;
@@ -642,28 +564,161 @@ label {
   cursor: pointer;
 }
 
-.custom-select onchange {
-  background: transparent;
-  border: none;
-  font-size: 14px;
-  height: 29px;
-  padding: 5px;
-  /* If you add too much padding here, the options won't show in IE */
-  width: 268px;
+select {
+  background-color: white;
+  border-left: 1px solid #14af8f;
+  border-top: 1px solid #14af8f;
+  border-radius: 4px;
+  display: inline-block;
+  font: inherit;
+  line-height: 1.5em;
+  padding: 0.5em 3.5em 0.5em 1em;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
-.custom-select {
-  background: url(http://i62.tinypic.com/2e3ybe1.jpg) no-repeat right center;
-  height: 34px;
-  width: 240px;
-  -webkit-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
-  box-shadow: 32px 24px 7px -11px rgba(0, 0, 0, 0.75);
+@media all and (max-width: 1025px) {
+  .container .picture {
+    width: 45%;
+  }
+  .container .picture h2 {
+    font-size: 1.1rem;
+  }
+  .about .container {
+    min-height: 0;
+  }
+  .about .section-heading {
+    padding: 20px 350px 0 20px;
+    margin: 0 auto;
+    min-height: 0;
+  }
+  .about2 .container {
+    min-height: 0;
+  }
+  .about2 .section-heading {
+    background-color: #fff;
+    width: 100%;
+    padding: 20px 0 300px 20px;
+    margin: 0 auto;
+    min-height: 0;
+  }
 }
 
-.custom-select select {
-  border: 1px solid #ccc;
-  font-size: 16px;
-  height: 34px;
-  width: 268px;
+@media all and (max-width: 804px) {
+  .container .picture {
+    width: 40%;
+  }
+  .poz .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+  }
+  .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .menu-item {
+    margin: 0 auto;
+  }
+  .burger {
+    display: none;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+  }
+  .form-box .form1 {
+    width: 100%;
+  }
+  .form2 input {
+    padding-left: 30px;
+  }
+}
+
+@media all and (max-width: 670px) {
+  .container .picture {
+    width: 100%;
+  }
+  .about .container {
+    height: 100vh;
+  }
+  .about2 .container {
+    height: 100vh;
+    padding-bottom: 580px;
+  }
+  .tablet_sone {
+    display: none;
+  }
+  .phone3 {
+    display: none;
+  }
+  .nav {
+    display: none;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .nav.show {
+    display: block;
+  }
+  .menu-item {
+    width: 100%;
+  }
+  .menu-item span {
+    font-size: 1.1rem;
+  }
+  .burger {
+    display: block;
+  }
+  .burger:hover {
+    cursor: pointer;
+  }
+  .container .burger {
+    text-align: center;
+    width: 100%;
+  }
+  .main-header .container {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+  }
+  .about .section-heading {
+    padding: 20px;
+    margin: 0 auto;
+    height: 100vh;
+  }
+  .about2 .section-heading {
+    background-color: #fff;
+    padding: 20px;
+    margin: 0 auto;
+    height: 100vh;
+  }
+  .about2 .container {
+    min-height: 0;
+  }
+  .about .container {
+    min-height: 0;
+  }
+  .section-heading .breaking_bad {
+    display: none;
+  }
+  .poz .container {
+    padding: 0;
+  }
+  .section-poz i {
+    padding: 10px;
+    margin: 5px;
+  }
+  .form-box {
+    padding: 0px;
+    margin: 0px;
+  }
 }
