--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,6 +1,5 @@
 .about {
-	// position: relative;
-	// background-color: black;
+	position: relative;
 	margin: 0 auto;
 }
 .about .container {
@@ -9,43 +8,39 @@
 	min-height: 100vh;
 
 }
-.about .section-heading h2{
-	color: #303030;
-	font-size: 2.5rem;
-	font-weight: 400;
-	line-height: 1;
-	margin: 0;
-	width: 50%;
-}
-
-.about .section-heading p{
-	color: #979797;
-	font-size: 1.0625rem;
-	line-height: 1.2941;
-	width: 50%;
-	// margin: 0;
-}
-
 .about .section-heading {
 	background-color: white;
-	padding: 66px 0 0 150px;
+	padding: 66px 0 250px 150px;
 	border-radius: 50px;
 	border-left: 2px solid  #14af8f;
 	border-top: 5px solid  #14af8f;
-
 	
-
+	h2 {
+		color: #303030;
+		font-size: 2.5rem;
+		font-weight: 400;
+		line-height: 1;
+		margin: 0;
+		width: 50%;
+	}
+	p{
+		color: #979797;
+		font-size: 1.0625rem;
+		line-height: 1.2941;
+	}
 }
-.about > .container a {
-	padding: 25px;
-	display: inline-block;
-	color: #14af8f;
-	border: 5px solid #14af8f;
-	border-radius: 25px;
-	transition: 0.9s;
-}
-.about a:hover {
-	@include hover-sizing();
+.about > .container {
+	a {
+		padding: 25px;
+		display: inline-block;
+		color: #14af8f;
+		border: 5px solid #14af8f;
+		border-radius: 25px;
+		transition: 0.9s;
+	}
+	a:hover{
+		@extend .hover-sizing;
+	}
 }
 .sayHello {
 	margin: 0 0 100px 0;
