--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -9,31 +9,31 @@
 }
 .poz .container {
 	justify-content:center;
-	padding: 100px;
+	padding: 50px;
 	border: 0px solid white;	
 	border-radius: 50px;
 	background-color: white;
 	
 }
+.section-poz {
+	// width: 100%;
+}
 .section-poz i {
-	margin:20px;
-	padding:30px;
+	margin:10px;
+	padding:20px;
 	border: 2px solid black;
 	border-radius: 100px;
 	transition: 0.9s;
+	color: #14af8f;
 	&:hover{
-		@include hover-sizing();
+		@extend .hover-sizing;
 	}
 
 }
 .about3 {
 	background-color: #e5e4e4;
 }
-.copyright {
-	font-size: .5rem;
-	color: black;
-	text-align: center;
-}
+
 #iVirsu {
   display: none;
   position: fixed;
@@ -54,6 +54,7 @@
 #iVirsu:hover {
   background-color: #ea4c89;
   transition: 0.9s;
+
 }
 
 form.form1 {
@@ -73,12 +74,21 @@ label, input {
 input {
 	width: 100%;
 	border-radius: 10px;
-	@include radius1()
+	@extend .radius1;
 }
 label {
-    padding-right: 10px;
+    padding-right: 20px;
 
 }
 .form-box {
     margin: 25px;
+}
+.form2 input:hover {
+	@extend .hover-sizing;
+	cursor:pointer;
+}
+.copyright {
+	font-size: .5rem;
+	color: black;
+	text-align: center;
 }
