--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -4,74 +4,63 @@
  	position: sticky;
 	top: 0;	
 	z-index: 2;
+	ul {
+		list-style: none;	
+		justify-content:space-around;
+		margin: 5px;
+	}
 }
 
+.main-header .container {
+	justify-content: center;
+	background-color: #fff;
+	
+}
 .main-nav {
-	width: 60%;
+	width: 100%;
 	border-radius: 50px;
 	border-top: 4px solid #14af8f;
 	border-left: 2px solid #14af8f;
 	border-right: 4px solid  #ea4c89;
 	border-bottom: 2px solid  #ea4c89;
 	opacity: .9;
-	width: 1000px;
+	width: 100%;
 	padding: 5px;
-}
-
-.main-header .container {
-	justify-content: center;
-	width: 40%;
-	background-color: white;
-}
-.main-header ul{
-	list-style: none;	
-}
-.main-nav .flex-container {
-	justify-content:space-around;
-	margin: 5px;
-}
-.phone3{
-	position: absolute;
-	left: 10%;
-	bottom: -40%;
-	z-index: 0;
-	
+	width: 30%;
+	font-size: 1.5rem;
 }
 
 .nav-link {
-	border-radius: 4px;
-	border: none;
-	text-align: center;
-	font-size: 1.5rem;
-	transition: all 0.5s;
-	cursor: pointer;
-	font-family: Comic Sans MS, Comic Sans, cursive;
-}
-.nav-link span {
-
-	color: #14af8f;
-	cursor: pointer;
-	display: inline-block;
-	position: relative;
-	transition: 0.9s;
-	background-color: white;
-}
-
-.nav-link span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.9s;
+	span {
+		color: #14af8f;
+		cursor: pointer;
+		display: inline-block;
+		position: relative;
+		transition: 0.9s;
+		background-color: white;
+	}
+	span:after{
+		content: '\00bb';
+		position: absolute;
+		opacity: 0;
+		top: 0;
+		right: -20px;
+		transition: 0.9s;
+	}
 }
 
-.button:hover span {
-  padding-right: 25px;
-  color: #ea4c89;
+.nav-select:hover {
+	span{
+		padding-right: 25px;
+		color: #ea4c89;
+	}
+	span:after{
+		opacity: 1;
+		right: 0;
+	}
 }
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
+.burger {
+	display: none;
+	font-size: 2rem;
+	margin: 0;
 }
