--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -5,26 +5,17 @@
 	top: 0%;
 	color: white;
 	margin: 0 0 0 50px;
-	@include box-shadow1();
-	
+	@extend .box-shadow1;
+	a {
+		text-decoration: none;
+	}
+	h2 {
+		padding: 25px;
+	}
+}
 
-}
-.logo1 a {
-	text-decoration: none;
-}
-.logo1 h2 {
-	padding: 30px;
-
-}
 .logo1:hover{
-	@include hover-sizing();
-}
-.hero{
-	background-image: url(../images/hero.jpg);
-	background-size: cover;
-	background-position: center;
-	color: #fff;
-	min-height: 90vh;
+	@extend .hover-sizing;
 }
 .hero h1,
 .hero h2,
@@ -35,23 +26,24 @@
   	text-shadow: 1.5px 2.598px 0px rgba(10, 12, 12, 0.1);
 }
 
-.hero h1{
-	font-family: 'Black Jack';
-	font-size: 3rem;
-	font-weight: 900; 
-	color: #282828;
+.hero {
+	background-image: url(../images/hero.jpg);
+	background-size: cover;
+	background-position: center;
+	color: #fff;
+	min-height: 90vh;
+	h1 {
+		font-family: 'Black Jack';
+		font-size: 3rem;
+		font-weight: 900; 
+		color: #282828;
+	}
+	h3 {
+		font-size: 1.125rem;
+		color: #484848;
+	}
 }
 
-h2{
-	font-size: 2rem;
-	color: #484848;
-	font-family: Comic Sans MS, Comic Sans, cursive;
-}
-
-.hero h3{
-	font-size: 1.125rem;
-	color: #484848;
-}
 .hero .container {
 	justify-content:flex-end;
 	align-items:center;
@@ -59,5 +51,10 @@ h2{
 	position: relative;
 
 }
-
+.phone3{
+	position: absolute;
+	left: 10%;
+	transform:translate(20%, 45%); 
+	bottom: 0;;	
+}
 
